--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="fb_game_manage">游戏管理</string>
     <string name="fb_game_list">游戏列表</string>
     <string name="fb_library_manage">核心安装管理</string>
-    <string name="fb_minecraft_log">游戏日志</string>
+    <string name="fb_game_path">游戏目录</string>
     <string name="fb_launcher_settings">启动器设置</string>
 
     <!--  =====================================Homepage===================================== -->
@@ -98,10 +98,9 @@
     <string name="text_setting_background_title">默认(自动检索启动器同目录下的background .png/jpg及bg文件夹内的图片)</string>
     <string name="text_setting_hide_statusbar">隐藏状态栏</string>
     <string name="text_setting_statusbar_title">默认关闭 打开将自动隐藏状态栏</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
 
     <string name="default_message">Message here</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
